src/parser/CmmParser.java
// Generated from C:/Users/UO300042/Desktop/DLP_2526/src/parser/Cmm.g4 by ANTLR 4.13.2
package parser;

    import ast.*;
    import ast.type.*;
    import ast.definition.*;
    import ast.expression.*;
    import ast.statement.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, INT_CONSTANT=37, REAL_CONSTANT=38, 
		CHAR_CONSTANT=39, ID=40, COMMENT=41, MULTILINE_COMMENT=42, WS=43;
	public static final int
		RULE_program = 0, RULE_variableType = 1, RULE_buildInType = 2, RULE_record = 3, 
		RULE_varDefinition = 4, RULE_mainFunctionDefinition = 5, RULE_functionDefinition = 6, 
		RULE_functionLocalVar = 7, RULE_functionDefinitionArgs = 8, RULE_functionReturnType = 9, 
		RULE_statement = 10, RULE_ioArguments = 11, RULE_block = 12, RULE_expression = 13, 
		RULE_functionCallArg = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "variableType", "buildInType", "record", "varDefinition", 
			"mainFunctionDefinition", "functionDefinition", "functionLocalVar", "functionDefinitionArgs", 
			"functionReturnType", "statement", "ioArguments", "block", "expression", 
			"functionCallArg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'int'", "'double'", "'char'", "'struct'", "'{'", 
			"'}'", "','", "';'", "'void'", "'main'", "'('", "')'", "'if'", "'else'", 
			"'while'", "'='", "'return'", "'read'", "'write'", "'.'", "'-'", "'!'", 
			"'/'", "'*'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "ID", "COMMENT", 
			"MULTILINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> defs = new ArrayList<Definition>();
		public VarDefinitionContext v;
		public FunctionDefinitionContext f;
		public MainFunctionDefinitionContext m;
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public MainFunctionDefinitionContext mainFunctionDefinition() {
			return getRuleContext(MainFunctionDefinitionContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(36);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(30);
						((ProgramContext)_localctx).v = varDefinition();
						_localctx.defs.addAll(((ProgramContext)_localctx).v.ast);
						}
						break;
					case 2:
						{
						setState(33);
						((ProgramContext)_localctx).f = functionDefinition();
						_localctx.defs.add(((ProgramContext)_localctx).f.ast);
						}
						break;
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(41);
			((ProgramContext)_localctx).m = mainFunctionDefinition();
			_localctx.defs.add(((ProgramContext)_localctx).m.ast);
			setState(43);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(_localctx.defs);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableTypeContext extends ParserRuleContext {
		public Type ast;
		public VariableTypeContext t1;
		public BuildInTypeContext b1;
		public RecordContext r1;
		public Token size;
		public BuildInTypeContext buildInType() {
			return getRuleContext(BuildInTypeContext.class,0);
		}
		public RecordContext record() {
			return getRuleContext(RecordContext.class,0);
		}
		public VariableTypeContext variableType() {
			return getRuleContext(VariableTypeContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public VariableTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableType; }
	}

	public final VariableTypeContext variableType() throws RecognitionException {
		return variableType(0);
	}

	private VariableTypeContext variableType(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VariableTypeContext _localctx = new VariableTypeContext(_ctx, _parentState);
		VariableTypeContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_variableType, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
			case T__4:
				{
				setState(47);
				((VariableTypeContext)_localctx).b1 = buildInType();
				((VariableTypeContext)_localctx).ast =  ((VariableTypeContext)_localctx).b1.ast;
				}
				break;
			case T__5:
				{
				setState(50);
				((VariableTypeContext)_localctx).r1 = record();
				((VariableTypeContext)_localctx).ast =  ((VariableTypeContext)_localctx).r1.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VariableTypeContext(_parentctx, _parentState);
					_localctx.t1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_variableType);
					setState(55);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(56);
					match(T__0);
					setState(57);
					((VariableTypeContext)_localctx).size = match(INT_CONSTANT);
					setState(58);
					match(T__1);
					((VariableTypeContext)_localctx).ast =  LexerHelper.arrayCreation( ((VariableTypeContext)_localctx).t1.ast, (((VariableTypeContext)_localctx).size!=null?((VariableTypeContext)_localctx).size.getText():null));
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BuildInTypeContext extends ParserRuleContext {
		public Type ast;
		public BuildInTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_buildInType; }
	}

	public final BuildInTypeContext buildInType() throws RecognitionException {
		BuildInTypeContext _localctx = new BuildInTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_buildInType);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				match(T__2);
				 ((BuildInTypeContext)_localctx).ast =  new IntType();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				match(T__3);
				 ((BuildInTypeContext)_localctx).ast =  new DoubleType();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				match(T__4);
				((BuildInTypeContext)_localctx).ast =  new CharType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecordContext extends ParserRuleContext {
		public RecordType ast;
		public VarDefinitionContext v1;
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public RecordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record; }
	}

	public final RecordContext record() throws RecognitionException {
		RecordContext _localctx = new RecordContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_record);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__5);
			setState(74);
			match(T__6);
			 List<RecordField> fields = new ArrayList<>(); 
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				((RecordContext)_localctx).v1 = varDefinition();

				            for (VariableDefinition vd : ((RecordContext)_localctx).v1.ast) {
				                fields.add(new RecordField(vd.getLine(), vd.getColumn(), vd.getVariableType(), vd.getName()));
				            }
				        
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 120L) != 0) );
			setState(83);
			match(T__7);
			 ((RecordContext)_localctx).ast =  new RecordType(fields); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public VariableTypeContext t1;
		public Token id1;
		public Token id2;
		public VariableTypeContext variableType() {
			return getRuleContext(VariableTypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			((VarDefinitionContext)_localctx).t1 = variableType(0);
			setState(87);
			((VarDefinitionContext)_localctx).id1 = match(ID);
			_localctx.ast.add(new VariableDefinition(((VarDefinitionContext)_localctx).id1.getLine(), ((VarDefinitionContext)_localctx).id1.getCharPositionInLine()+1, ((VarDefinitionContext)_localctx).t1.ast, (((VarDefinitionContext)_localctx).id1!=null?((VarDefinitionContext)_localctx).id1.getText():null)));
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(89);
				match(T__8);
				setState(90);
				((VarDefinitionContext)_localctx).id2 = match(ID);
				_localctx.ast.add(new VariableDefinition(((VarDefinitionContext)_localctx).id2.getLine(), ((VarDefinitionContext)_localctx).id2.getCharPositionInLine()+1, ((VarDefinitionContext)_localctx).t1.ast, (((VarDefinitionContext)_localctx).id2!=null?((VarDefinitionContext)_localctx).id2.getText():null)));
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainFunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<VariableDefinition> localVars = new ArrayList<VariableDefinition>();
		public List<Statement> localStmts = new ArrayList<Statement>();
		public List<Locatable> fullbody = new ArrayList<Locatable>();
		public Token returnT;
		public Token name;
		public VarDefinitionContext v;
		public StatementContext s;
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainFunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunctionDefinition; }
	}

	public final MainFunctionDefinitionContext mainFunctionDefinition() throws RecognitionException {
		MainFunctionDefinitionContext _localctx = new MainFunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mainFunctionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((MainFunctionDefinitionContext)_localctx).returnT = match(T__10);
			setState(100);
			((MainFunctionDefinitionContext)_localctx).name = match(T__11);
			setState(101);
			match(T__12);
			setState(102);
			match(T__13);
			setState(103);
			match(T__6);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2061613310072L) != 0)) {
				{
				setState(110);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
				case T__3:
				case T__4:
				case T__5:
					{
					setState(104);
					((MainFunctionDefinitionContext)_localctx).v = varDefinition();
					 _localctx.localVars.addAll(((MainFunctionDefinitionContext)_localctx).v.ast); _localctx.fullbody.addAll(((MainFunctionDefinitionContext)_localctx).v.ast);
					}
					break;
				case T__12:
				case T__14:
				case T__16:
				case T__18:
				case T__19:
				case T__20:
				case T__22:
				case T__23:
				case INT_CONSTANT:
				case REAL_CONSTANT:
				case CHAR_CONSTANT:
				case ID:
					{
					setState(107);
					((MainFunctionDefinitionContext)_localctx).s = statement();
					 _localctx.localStmts.addAll(((MainFunctionDefinitionContext)_localctx).s.ast);_localctx.fullbody.addAll(((MainFunctionDefinitionContext)_localctx).s.ast);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(T__7);
			((MainFunctionDefinitionContext)_localctx).ast =  new FunctionDefinition( ((MainFunctionDefinitionContext)_localctx).name.getLine(), ((MainFunctionDefinitionContext)_localctx).name.getCharPositionInLine()+1, new VoidType(), (((MainFunctionDefinitionContext)_localctx).name!=null?((MainFunctionDefinitionContext)_localctx).name.getText():null), new ArrayList<VariableDefinition>(), _localctx.localVars, _localctx.localStmts, _localctx.fullbody);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<VariableDefinition> localVars = new ArrayList<VariableDefinition>();
		public List<Statement> localStmts = new ArrayList<Statement>();
		public List<Locatable> fullbody = new ArrayList<Locatable>();
		public FunctionReturnTypeContext returnT;
		public Token id1;
		public FunctionDefinitionArgsContext args;
		public VarDefinitionContext v;
		public StatementContext s;
		public FunctionReturnTypeContext functionReturnType() {
			return getRuleContext(FunctionReturnTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public FunctionDefinitionArgsContext functionDefinitionArgs() {
			return getRuleContext(FunctionDefinitionArgsContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}
